# nm-objdump

./: .gitignore  CMakeLists.txt  Makefile
new_nm/: ar.c  elf.c  elf_format.c  linked_list.c  misc.c  nm.c  print_type.c  str.c  symbols.c
new_nm/include/: nm.h
new_objdump/: ar.c  common.c  elf.c  elf_format.c  misc.c  obj.c  print.c
new_objdump/include/: objdump.h
nm/: ar.c  elf.c  elf_format.c  extract_symbol.c  linked_list.c  main.c  misc.c  nm.c  print_type.c  str.c  symbols.c
nm/elf/: elf_32.c  elf_64.c
nm/include/: nm.h
objdump/: ar.c  common.c  elf.c  elf_format.c  flags.c  main.c  misc.c  obj.c  print.c  print_header.c  print_hexa.c  print_section.c
objdump/include/: flags.h  objdump.h
